Fix Link from footlink to footlink-ref not working in PDF. BZ #909786

--- a/publican/Changes
+++ b/publican/Changes
@@ -44,6 +44,7 @@
   - Fix edition missing on PDF cover pages. BZ #956940
   - Support XML in add_revision member. BZ #862465
   - Fix duplicate footnotes in bibliography. BZ #653447
+  - Fix Link from footlink to footlink-ref not working in PDF. BZ #909786
 
 3.1.5 Mon Mar 18 2013
   - Fix translated PDF encode issue when build from packaged books. BZ #922618
