Fix POT-Creation-Date format. BZ #985836

--- a/publican/TODO
+++ b/publican/TODO
@@ -1,14 +1,27 @@
+NO:
+
 https://bugzilla.redhat.com/show_bug.cgi?id=979846
-https://bugzilla.redhat.com/show_bug.cgi?id=963994
-https://bugzilla.redhat.com/show_bug.cgi?id=811726
 https://bugzilla.redhat.com/show_bug.cgi?id=830065
-https://bugzilla.redhat.com/show_bug.cgi?id=804531
+
+In Action:
+
+https://bugzilla.redhat.com/show_bug.cgi?id=963994
+
+ToDo:
+
 https://bugzilla.redhat.com/show_bug.cgi?id=718717
-https://bugzilla.redhat.com/show_bug.cgi?id=864226
 https://bugzilla.redhat.com/show_bug.cgi?id=967664
+https://bugzilla.redhat.com/show_bug.cgi?id=697364
+
+NeedInfo:
+
+https://bugzilla.redhat.com/show_bug.cgi?id=811726
+
+SVN->Git
+
+https://bugzilla.redhat.com/show_bug.cgi?id=864226
 https://bugzilla.redhat.com/show_bug.cgi?id=719835
 https://bugzilla.redhat.com/show_bug.cgi?id=719832
-https://bugzilla.redhat.com/show_bug.cgi?id=697364
  
 Publican 3.1:
 
