--- a/publican/Users_Guide/pot/Adding_Files.pot
+++ b/publican/Users_Guide/pot/Adding_Files.pot
@@ -4,8 +4,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: 0\n"
-"POT-Creation-Date: 2013-07-11T03:41:02\n"
-"PO-Revision-Date: 2013-07-11T03:41:02\n"
+"POT-Creation-Date: 2013-07-19 08:51+1000\n"
+"PO-Revision-Date: 2013-07-19 08:51+1000\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: None\n"
 "MIME-Version: 1.0\n"
@@ -34,7 +34,7 @@ msgstr ""
 
 #. Tag: screen
 #, no-c-format
-msgid "<command>mkdir en-US/files</command>"
+msgid "<prompt>$</prompt> <command>mkdir en-US/files</command>"
 msgstr ""
 
 #. Tag: para
@@ -44,6 +44,6 @@ msgstr ""
 
 #. Tag: screen
 #, no-c-format
-msgid "<command>cp arbitrary_files en-US/files</command>"
+msgid "<prompt>$</prompt> <command>cp arbitrary_files en-US/files</command>"
 msgstr ""
 
