--- a/publican/Users_Guide/pot/Building_a_Book.pot
+++ b/publican/Users_Guide/pot/Building_a_Book.pot
@@ -4,8 +4,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: 0\n"
-"POT-Creation-Date: 2013-07-11T03:41:02\n"
-"PO-Revision-Date: 2013-07-11T03:41:02\n"
+"POT-Creation-Date: 2013-07-19 08:51+1000\n"
+"PO-Revision-Date: 2013-07-19 08:51+1000\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: None\n"
 "MIME-Version: 1.0\n"
@@ -34,7 +34,7 @@ msgstr ""
 
 #. Tag: screen
 #, no-c-format
-msgid "<command>publican build --formats html,pdf --langs en-US,de-DE,hu-HU --config community.cfg</command>"
+msgid "<prompt>$</prompt> <command>publican build --formats html,pdf --langs en-US,de-DE,hu-HU --config community.cfg</command>"
 msgstr ""
 
 #. Tag: para
@@ -54,7 +54,7 @@ msgstr ""
 
 #. Tag: screen
 #, no-c-format
-msgid "<command>cd ~/books/Test_Book</command>"
+msgid "<prompt>$</prompt> <command>cd ~/books/Test_Book</command>"
 msgstr ""
 
 #. Tag: para
@@ -64,7 +64,7 @@ msgstr ""
 
 #. Tag: screen
 #, no-c-format
-msgid "<command>publican build --formats=test --langs=en-US</command>"
+msgid "<prompt>$</prompt> <command>publican build --formats=test --langs=en-US</command>"
 msgstr ""
 
 #. Tag: para
@@ -74,7 +74,7 @@ msgstr ""
 
 #. Tag: screen
 #, no-c-format
-msgid "<command>publican build --formats=<replaceable>formats</replaceable> --langs=<replaceable>languages</replaceable></command>"
+msgid "<prompt>$</prompt> <command>publican build --formats=<replaceable>formats</replaceable> --langs=<replaceable>languages</replaceable></command>"
 msgstr ""
 
 #. Tag: para
