--- a/publican/Users_Guide/pot/Creating_a_Book.pot
+++ b/publican/Users_Guide/pot/Creating_a_Book.pot
@@ -4,8 +4,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: 0\n"
-"POT-Creation-Date: 2013-07-11T03:41:02\n"
-"PO-Revision-Date: 2013-07-11T03:41:02\n"
+"POT-Creation-Date: 2013-07-19 08:51+1000\n"
+"PO-Revision-Date: 2013-07-19 08:51+1000\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: None\n"
 "MIME-Version: 1.0\n"
@@ -129,7 +129,7 @@ msgstr ""
 
 #. Tag: screen
 #, no-c-format
-msgid "<command>cd my_books/</command> \n"
+msgid "<prompt>$</prompt> <command>cd my_books/</command> \n"
 "<command>publican create --name Test_Book</command>"
 msgstr ""
 
@@ -140,7 +140,7 @@ msgstr ""
 
 #. Tag: screen
 #, no-c-format
-msgid "<command>ls</command>"
+msgid "<prompt>$</prompt> <command>ls</command>"
 msgstr ""
 
 #. Tag: para
@@ -160,7 +160,7 @@ msgstr ""
 
 #. Tag: screen
 #, no-c-format
-msgid "<command>cd Test_Book/</command>\n"
+msgid "<prompt>$</prompt> <command>cd Test_Book/</command>\n"
 "<command>ls</command>"
 msgstr ""
 
