--- a/publican/Users_Guide/pot/Creating_a_Brand.pot
+++ b/publican/Users_Guide/pot/Creating_a_Brand.pot
@@ -4,8 +4,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: 0\n"
-"POT-Creation-Date: 2013-07-11T03:41:02\n"
-"PO-Revision-Date: 2013-07-11T03:41:02\n"
+"POT-Creation-Date: 2013-07-19 08:51+1000\n"
+"PO-Revision-Date: 2013-07-19 08:51+1000\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: None\n"
 "MIME-Version: 1.0\n"
@@ -24,7 +24,7 @@ msgstr ""
 
 #. Tag: screen
 #, no-c-format
-msgid "<command>publican create_brand --name=<replaceable>brand</replaceable> --lang=<replaceable>language_code</replaceable></command>\n"
+msgid "<prompt>$</prompt> <command>publican create_brand --name=<replaceable>brand</replaceable> --lang=<replaceable>language_code</replaceable></command>\n"
 ""
 msgstr ""
 
@@ -40,7 +40,7 @@ msgstr ""
 
 #. Tag: screen
 #, no-c-format
-msgid "<command>publican create_brand --name=Acme --lang=en-US</command>\n"
+msgid "<prompt>$</prompt> <command>publican create_brand --name=Acme --lang=en-US</command>\n"
 ""
 msgstr ""
 
@@ -56,7 +56,7 @@ msgstr ""
 
 #. Tag: screen
 #, no-c-format
-msgid "<command>grep -r 'SETUP' *</command>\n"
+msgid "<prompt>$</prompt> <command>grep -r 'SETUP' *</command>\n"
 ""
 msgstr ""
 
