--- a/publican/Users_Guide/pot/Installing_a_Brand.pot
+++ b/publican/Users_Guide/pot/Installing_a_Brand.pot
@@ -4,8 +4,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: 0\n"
-"POT-Creation-Date: 2013-07-11T03:41:02\n"
-"PO-Revision-Date: 2013-07-11T03:41:02\n"
+"POT-Creation-Date: 2013-07-19 08:51+1000\n"
+"PO-Revision-Date: 2013-07-19 08:51+1000\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: None\n"
 "MIME-Version: 1.0\n"
@@ -49,7 +49,7 @@ msgstr ""
 
 #. Tag: screen
 #, no-c-format
-msgid "<command>cd publican-<replaceable>brand</replaceable></command>\n"
+msgid "<prompt>$</prompt> <command>cd publican-<replaceable>brand</replaceable></command>\n"
 ""
 msgstr ""
 
@@ -65,7 +65,7 @@ msgstr ""
 
 #. Tag: screen
 #, no-c-format
-msgid "<command>publican build --formats xml --langs all --publish</command>\n"
+msgid "<prompt>$</prompt> <command>publican build --formats xml --langs all --publish</command>\n"
 ""
 msgstr ""
 
@@ -76,7 +76,7 @@ msgstr ""
 
 #. Tag: screen
 #, no-c-format
-msgid "<command>sudo publican install_brand --path <replaceable>path</replaceable></command>\n"
+msgid "<prompt>$</prompt> <command>sudo publican install_brand --path <replaceable>path</replaceable></command>\n"
 ""
 msgstr ""
 
@@ -87,7 +87,7 @@ msgstr ""
 
 #. Tag: screen
 #, no-c-format
-msgid "<command>sudo publican install_brand --path /usr/share/publican/Common_Content</command>\n"
+msgid "<prompt>$</prompt> <command>sudo publican install_brand --path /usr/share/publican/Common_Content</command>\n"
 ""
 msgstr ""
 
@@ -98,7 +98,7 @@ msgstr ""
 
 #. Tag: screen
 #, no-c-format
-msgid "<command>publican install_brand --path \"C:/Program Files/Publican/Common_Content\"</command>\n"
+msgid "<prompt>$</prompt> <command>publican install_brand --path \"C:/Program Files/Publican/Common_Content\"</command>\n"
 ""
 msgstr ""
 
