--- a/publican/Users_Guide/pot/Preparing_a_Book_for_Translation.pot
+++ b/publican/Users_Guide/pot/Preparing_a_Book_for_Translation.pot
@@ -4,8 +4,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: 0\n"
-"POT-Creation-Date: 2013-07-11T03:41:02\n"
-"PO-Revision-Date: 2013-07-11T03:41:02\n"
+"POT-Creation-Date: 2013-07-19 08:51+1000\n"
+"PO-Revision-Date: 2013-07-19 08:51+1000\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: None\n"
 "MIME-Version: 1.0\n"
@@ -39,7 +39,7 @@ msgstr ""
 
 #. Tag: screen
 #, no-c-format
-msgid "$ <command>publican update_pot</command>\n"
+msgid "<prompt>$</prompt> <command>publican update_pot</command>\n"
 ""
 msgstr ""
 
@@ -70,7 +70,7 @@ msgstr ""
 
 #. Tag: screen
 #, no-c-format
-msgid "$ <command>publican update_po --langs=<replaceable>language_code</replaceable></command>\n"
+msgid "<prompt>$</prompt> <command>publican update_po --langs=<replaceable>language_code</replaceable></command>\n"
 ""
 msgstr ""
 
@@ -81,7 +81,7 @@ msgstr ""
 
 #. Tag: screen
 #, no-c-format
-msgid "$ <command>publican update_po --langs=hi-IN,pt-BR,ru-RU,zh-CN</command>\n"
+msgid "<prompt>$</prompt> <command>publican update_po --langs=hi-IN,pt-BR,ru-RU,zh-CN</command>\n"
 ""
 msgstr ""
 
@@ -92,7 +92,7 @@ msgstr ""
 
 #. Tag: screen
 #, no-c-format
-msgid "$ <command>publican update_po --langs=all</command>\n"
+msgid "<prompt>$</prompt> <command>publican update_po --langs=all</command>\n"
 ""
 msgstr ""
 
@@ -123,7 +123,7 @@ msgstr ""
 
 #. Tag: screen
 #, no-c-format
-msgid "$ <command>publican build --formats=html,html-single,pdf --langs=is-IS,nb-NO</command>\n"
+msgid "<prompt>$</prompt> <command>publican build --formats=html,html-single,pdf --langs=is-IS,nb-NO</command>\n"
 ""
 msgstr ""
 
@@ -134,7 +134,7 @@ msgstr ""
 
 #. Tag: screen
 #, no-c-format
-msgid "$ <command>publican package --lang=is-IS</command>\n"
+msgid "<prompt>$</prompt> <command>publican package --lang=is-IS</command>\n"
 ""
 msgstr ""
 
