--- a/publican/Users_Guide/pot/Publican_Defaults.pot
+++ b/publican/Users_Guide/pot/Publican_Defaults.pot
@@ -4,8 +4,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: 0\n"
-"POT-Creation-Date: 2013-07-11T03:41:03\n"
-"PO-Revision-Date: 2013-07-11T03:41:03\n"
+"POT-Creation-Date: 2013-07-19 08:51+1000\n"
+"PO-Revision-Date: 2013-07-19 08:51+1000\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: None\n"
 "MIME-Version: 1.0\n"
@@ -74,14 +74,12 @@ msgstr ""
 
 #. Tag: screen
 #, no-c-format
-msgid "\n"
-"$ echo 'formats: \"html,html-single,pdf,txt\"' &gt;&gt; ~/.publican.cfg\n"
-"$ echo 'langs: \"en-US\"' &gt;&gt; ~/.publican.cfg\n"
-"$ publican build\n"
-"Setting up en-US\n"
-"[...]\n"
-"	Finished txt\n"
-""
+msgid "<prompt>$</prompt> <command>echo 'formats: \"html,html-single,pdf,txt\"' &gt;&gt; ~/.publican.cfg</command>\n"
+"<prompt>$</prompt> <command>echo 'langs: \"en-US\"' &gt;&gt; ~/.publican.cfg</command>\n"
+"<prompt>$</prompt> <command>publican build</command>\n"
+"<computeroutput>Setting up en-US</computeroutput>\n"
+"<computeroutput>[...]</computeroutput>\n"
+"<computeroutput>	Finished txt</computeroutput>"
 msgstr ""
 
 #. Tag: para
@@ -96,12 +94,10 @@ msgstr ""
 
 #. Tag: screen
 #, no-c-format
-msgid "\n"
-"$ echo 'firstname: \"Dude\"' &gt;&gt; ~/.publican.cfg \n"
-"$ echo 'surname: \"McPants\"' &gt;&gt; ~/.publican.cfg \n"
-"$ echo 'email: \"dude.mcpants@awesome.com\"' &gt;&gt; ~/.publican.cfg \n"
-"$ publican add_revision --member \"Updated examples in chapter 2.\" \\\n"
-"--member \"Removed obsolete example in sect 4.1\"\n"
-""
+msgid "<prompt>$</prompt> <command>echo 'firstname: \"Dude\"' &gt;&gt; ~/.publican.cfg</command> \n"
+"<prompt>$</prompt> <command>echo 'surname: \"McPants\"' &gt;&gt; ~/.publican.cfg</command> \n"
+"<prompt>$</prompt> <command>echo 'email: \"dude.mcpants@awesome.com\"' &gt;&gt; ~/.publican.cfg</command> \n"
+"<prompt>$</prompt> <command>publican add_revision --member \"Updated examples in chapter 2.\" \\</command>\n"
+"<command>--member \"Removed obsolete example in sect 4.1\"</command>"
 msgstr ""
 
