--- a/publican/Users_Guide/pot/Renaming_a_document.pot
+++ b/publican/Users_Guide/pot/Renaming_a_document.pot
@@ -4,8 +4,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: 0\n"
-"POT-Creation-Date: 2013-07-11T03:41:03\n"
-"PO-Revision-Date: 2013-07-11T03:41:03\n"
+"POT-Creation-Date: 2013-07-19 08:51+1000\n"
+"PO-Revision-Date: 2013-07-19 08:51+1000\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: None\n"
 "MIME-Version: 1.0\n"
@@ -34,7 +34,7 @@ msgstr ""
 
 #. Tag: screen
 #, no-c-format
-msgid "<command>publican rename --name \"Server Deployment Guide\"</command>"
+msgid "<prompt>$</prompt> <command>publican rename --name \"Server Deployment Guide\"</command>"
 msgstr ""
 
 #. Tag: para
@@ -59,7 +59,7 @@ msgstr ""
 
 #. Tag: screen
 #, no-c-format
-msgid "<command>publican rename --product PendantFarm</command>"
+msgid "<prompt>$</prompt> <command>publican rename --product PendantFarm</command>"
 msgstr ""
 
 #. Tag: para
@@ -79,7 +79,7 @@ msgstr ""
 
 #. Tag: screen
 #, no-c-format
-msgid "<command>publican rename --version 2.0</command>"
+msgid "<prompt>$</prompt> <command>publican rename --version 2.0</command>"
 msgstr ""
 
 #. Tag: para
@@ -94,6 +94,6 @@ msgstr ""
 
 #. Tag: screen
 #, no-c-format
-msgid "<command>publican rename --name \"Server Deployment Guide\" --product PendantFarm --version 2.0</command>"
+msgid "<prompt>$</prompt> <command>publican rename --name \"Server Deployment Guide\" --product PendantFarm --version 2.0</command>"
 msgstr ""
 
