--- a/publican/Users_Guide/pot/Sets.pot
+++ b/publican/Users_Guide/pot/Sets.pot
@@ -4,8 +4,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: 0\n"
-"POT-Creation-Date: 2013-07-11T03:41:03\n"
-"PO-Revision-Date: 2013-07-11T03:41:03\n"
+"POT-Creation-Date: 2013-07-19 08:51+1000\n"
+"PO-Revision-Date: 2013-07-19 08:51+1000\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: None\n"
 "MIME-Version: 1.0\n"
@@ -76,10 +76,8 @@ msgstr ""
 
 #. Tag: screen
 #, no-c-format
-msgid "cd My_Set/en-US\n"
-"mkdir Book_A Book_B\n"
-"\n"
-""
+msgid "<prompt>$</prompt> <command>cd</command> <filename>My_Set/en-US</filename>\n"
+"<prompt>$</prompt> <command>mkdir</command> <filename>Book_A</filename> <filename>Book_B</filename>"
 msgstr ""
 
 #. Tag: para
