--- a/publican/Users_Guide/pot/Adding_Code_Samples.pot
+++ b/publican/Users_Guide/pot/Adding_Code_Samples.pot
@@ -4,8 +4,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: 0\n"
-"POT-Creation-Date: 2013-07-11T03:41:02\n"
-"PO-Revision-Date: 2013-07-11T03:41:02\n"
+"POT-Creation-Date: 2013-07-19 08:51+1000\n"
+"PO-Revision-Date: 2013-07-19 08:51+1000\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: None\n"
 "MIME-Version: 1.0\n"
@@ -39,7 +39,7 @@ msgstr ""
 
 #. Tag: screen
 #, no-c-format
-msgid "<command>mkdir <filename>en-US/extras</filename></command>\n"
+msgid "<prompt>$</prompt> <command>mkdir <filename>en-US/extras</filename></command>\n"
 ""
 msgstr ""
 
@@ -50,7 +50,7 @@ msgstr ""
 
 #. Tag: screen
 #, no-c-format
-msgid "<command>cp <filename>~/samples/foo.c en-US/extras/.</filename></command>\n"
+msgid "<prompt>$</prompt> <command>cp <filename>~/samples/foo.c en-US/extras/.</filename></command>\n"
 ""
 msgstr ""
 
