--- a/publican/Users_Guide/pot/Packaging_a_Book.pot
+++ b/publican/Users_Guide/pot/Packaging_a_Book.pot
@@ -4,8 +4,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: 0\n"
-"POT-Creation-Date: 2013-07-11T03:41:02\n"
-"PO-Revision-Date: 2013-07-11T03:41:02\n"
+"POT-Creation-Date: 2013-07-19 08:51+1000\n"
+"PO-Revision-Date: 2013-07-19 08:51+1000\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: None\n"
 "MIME-Version: 1.0\n"
@@ -34,7 +34,7 @@ msgstr ""
 
 #. Tag: screen
 #, no-c-format
-msgid "<command>publican package --lang hi-IN --config community.cfg</command>\n"
+msgid "<prompt>$</prompt> <command>publican package --lang hi-IN --config community.cfg</command>\n"
 ""
 msgstr ""
 
@@ -95,7 +95,7 @@ msgstr ""
 
 #. Tag: para
 #, no-c-format
-msgid "your book or your brand contains the <parameter>web_formats</parameter> parameter. The value of this parameter overrides the default formats that <application>Publican</application> packages. For example, to publish the document only as single-page HTML, PDF, and text, set <literal>web_formats: html-single,pdf,txt</literal>"
+msgid "your book or your brand contains the <parameter>web_formats</parameter> parameter. The value of this parameter overrides the default formats that <application>Publican</application> packages. For example, to publish the document only as single-page HTML, PDF, and text, set <literal>web_formats: \"html-single,pdf,txt\"</literal>"
 msgstr ""
 
 #. Tag: para
