--- a/publican/Users_Guide/pot/Websites_homepage_rpm.pot
+++ b/publican/Users_Guide/pot/Websites_homepage_rpm.pot
@@ -4,8 +4,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: 0\n"
-"POT-Creation-Date: 2013-07-11T03:41:03\n"
-"PO-Revision-Date: 2013-07-11T03:41:03\n"
+"POT-Creation-Date: 2013-07-19 08:51+1000\n"
+"PO-Revision-Date: 2013-07-19 08:51+1000\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: None\n"
 "MIME-Version: 1.0\n"
@@ -34,12 +34,12 @@ msgstr ""
 
 #. Tag: screen
 #, no-c-format
-msgid "<command>publican package --binary</command>"
+msgid "<prompt>$</prompt> <command>publican package --binary</command>"
 msgstr ""
 
 #. Tag: para
 #, no-c-format
-msgid "<application>Publican</application> builds an RPM package and places it in the <filename>/tmp/rpms/noarch/</filename> directory of the home page. Note that by default, <application>Publican</application> generates an RPM package to install on a server that runs Red Hat Enterprise Linux&nbsp;5. To build an RPM package to install on a server that runs a different operating system, set the <parameter>os_ver</parameter> parameter in the home page's <filename>publican.cfg</filename> file."
+msgid "<application>Publican</application> builds an RPM package and places it in the <filename>/tmp/rpms/noarch/</filename> directory of the home page. By default, <application>Publican</application> builds the RPM package for the operating system within which you are running <application>Publican</application>. To build an RPM package to install on a server that runs a different operating system, set the <parameter>os_ver</parameter> parameter in the home page's <filename>publican.cfg</filename> file."
 msgstr ""
 
 #. Tag: para
