--- a/publican/Users_Guide/pot/Websites_structure_manual.pot
+++ b/publican/Users_Guide/pot/Websites_structure_manual.pot
@@ -4,8 +4,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: 0\n"
-"POT-Creation-Date: 2013-07-11T03:41:03\n"
-"PO-Revision-Date: 2013-07-11T03:41:03\n"
+"POT-Creation-Date: 2013-07-19 08:51+1000\n"
+"PO-Revision-Date: 2013-07-19 08:51+1000\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: None\n"
 "MIME-Version: 1.0\n"
@@ -29,7 +29,7 @@ msgstr ""
 
 #. Tag: screen
 #, no-c-format
-msgid "<command>mkdir ~/docsite</command>\n"
+msgid "<prompt>$</prompt> <command>mkdir ~/docsite</command>\n"
 "<command>cd ~/docsite</command>"
 msgstr ""
 
@@ -70,7 +70,7 @@ msgstr ""
 
 #. Tag: screen
 #, no-c-format
-msgid "<command>publican create_site --site_config foomaster.cfg --db_file foomaster.db --toc_path html/docs</command>"
+msgid "<prompt>$</prompt> <command>publican create_site --site_config foomaster.cfg --db_file foomaster.db --toc_path html/docs</command>"
 msgstr ""
 
 #. Tag: para
@@ -240,7 +240,7 @@ msgstr ""
 
 #. Tag: screen
 #, no-c-format
-msgid "<command>touch site_overrides.css</command>"
+msgid "<prompt>$</prompt> <command>touch site_overrides.css</command>"
 msgstr ""
 
 #. Tag: para
@@ -250,6 +250,6 @@ msgstr ""
 
 #. Tag: screen
 #, no-c-format
-msgid "<command>publican update_site --site_config <replaceable>path_to_site_configuration_file</replaceable>.cfg</command>"
+msgid "<prompt>$</prompt> <command>publican update_site --site_config <replaceable>path_to_site_configuration_file</replaceable>.cfg</command>"
 msgstr ""
 
