--- a/publican/Users_Guide/pot/Websites_structure_rpm.pot
+++ b/publican/Users_Guide/pot/Websites_structure_rpm.pot
@@ -4,8 +4,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: 0\n"
-"POT-Creation-Date: 2013-07-11T03:41:03\n"
-"PO-Revision-Date: 2013-07-11T03:41:03\n"
+"POT-Creation-Date: 2013-07-19 08:51+1000\n"
+"PO-Revision-Date: 2013-07-19 08:51+1000\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: None\n"
 "MIME-Version: 1.0\n"
@@ -44,7 +44,7 @@ msgstr ""
 
 #. Tag: screen
 #, no-c-format
-msgid "<command>su -</command>"
+msgid "<prompt>$</prompt> <command>su -</command>"
 msgstr ""
 
 #. Tag: para
@@ -54,7 +54,7 @@ msgstr ""
 
 #. Tag: screen
 #, no-c-format
-msgid "<command>yum install publican</command>"
+msgid "<prompt>$</prompt> <command>yum install publican</command>"
 msgstr ""
 
 #. Tag: para
@@ -189,7 +189,7 @@ msgstr ""
 
 #. Tag: screen
 #, no-c-format
-msgid "<command>touch /var/www/html/docs/site_overrides.css</command>"
+msgid "<prompt>$</prompt> <command>touch /var/www/html/docs/site_overrides.css</command>"
 msgstr ""
 
 #. Tag: para
@@ -199,6 +199,6 @@ msgstr ""
 
 #. Tag: screen
 #, no-c-format
-msgid "<command>publican update_site --site_config /etc/publican-website.cfg</command>"
+msgid "<prompt>$</prompt> <command>publican update_site --site_config /etc/publican-website.cfg</command>"
 msgstr ""
 
