Fix site stats report swapping languages and products.

--- a/publican/Changes
+++ b/publican/Changes
@@ -50,6 +50,7 @@
   - Support decimals in colwidth & convert exact measures to pixels. BZ #913775
   - Tweak equation formatting. BZ #804531
   - Fix POT-Creation-Date format. BZ #985836
+  - Fix site stats report swapping languages and products.
 
 3.1.5 Mon Mar 18 2013
   - Fix translated PDF encode issue when build from packaged books. BZ #922618
