--- a/publican/TODO
+++ b/publican/TODO
@@ -1,3 +1,9 @@
+The database contains books that cover 23 products, 53 languages,  totalling 2178 packages
+
+That appears to be rong ... very wrong.
+
+
+
 NO:
 
 https://bugzilla.redhat.com/show_bug.cgi?id=979846
