--- a/publican/po/as.po
+++ b/publican/po/as.po
@@ -585,15 +585,15 @@ msgstr ""
 
 #: lib/Publican/WebSite.pm:126
 msgid "Document"
-msgstr ""
+msgstr "দস্তাবেজ"
 
 #: lib/Publican/WebSite.pm:128
-msgid "Document Home"
-msgstr ""
+msgid "Document home"
+msgstr "দস্তাবেজৰ ঘৰ"
 
 #: lib/Publican/WebSite.pm:127
-msgid "Document Language"
-msgstr ""
+msgid "Document language"
+msgstr "দস্তাবেজৰ ভাষা"
 
 #. ($attr)
 #: lib/Publican/XmlClean.pm:633
@@ -786,7 +786,7 @@ msgstr ""
 
 #: lib/Publican/WebSite.pm:124
 msgid "Formats"
-msgstr ""
+msgstr "বিন্যাসসমূহ"
 
 #: lib/Publican.pm:442
 msgid "Full path for the publican site configuration file for non standard RPM websites."
@@ -872,7 +872,7 @@ msgstr ""
 
 #: lib/Publican/WebSite.pm:125
 msgid "Knowledge"
-msgstr ""
+msgstr "জ্ঞান"
 
 #: lib/Publican/WebSite.pm:97
 msgid "Language"
