--- a/publican/po/es.po
+++ b/publican/po/es.po
@@ -591,16 +591,15 @@ msgstr "No ejecute la validación DTD"
 
 #: lib/Publican/WebSite.pm:126
 msgid "Document"
-msgstr ""
+msgstr "Documento"
 
 #: lib/Publican/WebSite.pm:128
-msgid "Document Home"
-msgstr ""
+msgid "Document home"
+msgstr "Página de inicio del documento"
 
 #: lib/Publican/WebSite.pm:127
-#, fuzzy
-msgid "Document Language"
-msgstr "Total de idiomas"
+msgid "Document language"
+msgstr "Idioma del documento"
 
 #. ($attr)
 #: lib/Publican/XmlClean.pm:633
@@ -793,7 +792,7 @@ msgstr ""
 
 #: lib/Publican/WebSite.pm:124
 msgid "Formats"
-msgstr ""
+msgstr "Formatos"
 
 #: lib/Publican.pm:442
 msgid "Full path for the publican site configuration file for non standard RPM websites."
@@ -879,7 +878,7 @@ msgstr "Palabras claves"
 
 #: lib/Publican/WebSite.pm:125
 msgid "Knowledge"
-msgstr ""
+msgstr "Conocimiento"
 
 #: lib/Publican/WebSite.pm:97
 msgid "Language"
