--- a/publican/po/fr.po
+++ b/publican/po/fr.po
@@ -589,15 +589,15 @@ msgstr ""
 
 #: lib/Publican/WebSite.pm:126
 msgid "Document"
-msgstr ""
+msgstr "Document"
 
 #: lib/Publican/WebSite.pm:128
-msgid "Document Home"
-msgstr ""
+msgid "Document home"
+msgstr "Accueil du document"
 
 #: lib/Publican/WebSite.pm:127
-msgid "Document Language"
-msgstr ""
+msgid "Document language"
+msgstr "Langue du document"
 
 #. ($attr)
 #: lib/Publican/XmlClean.pm:633
@@ -790,7 +790,7 @@ msgstr ""
 
 #: lib/Publican/WebSite.pm:124
 msgid "Formats"
-msgstr ""
+msgstr "Formats"
 
 #: lib/Publican.pm:442
 msgid "Full path for the publican site configuration file for non standard RPM websites."
@@ -876,7 +876,7 @@ msgstr "Mots-clés"
 
 #: lib/Publican/WebSite.pm:125
 msgid "Knowledge"
-msgstr ""
+msgstr "Connaissances"
 
 #: lib/Publican/WebSite.pm:97
 msgid "Language"
