--- a/publican/po/ja.po
+++ b/publican/po/ja.po
@@ -593,17 +593,16 @@ msgstr ""
 
 #: lib/Publican/WebSite.pm:126
 msgid "Document"
-msgstr ""
+msgstr "ドキュメント"
 
 #: lib/Publican/WebSite.pm:128
-msgid "Document Home"
-msgstr ""
+msgid "Document home"
+msgstr "ドキュメントホーム"
 
 # translation auto-copied from project Publican, version 3, document publican
 #: lib/Publican/WebSite.pm:127
-#, fuzzy
-msgid "Document Language"
-msgstr "言語数の合計"
+msgid "Document language"
+msgstr "ドキュメント言語"
 
 #. ($attr)
 #: lib/Publican/XmlClean.pm:633
@@ -796,7 +795,7 @@ msgstr ""
 
 #: lib/Publican/WebSite.pm:124
 msgid "Formats"
-msgstr ""
+msgstr "フォーマット"
 
 #: lib/Publican.pm:442
 msgid "Full path for the publican site configuration file for non standard RPM websites."
@@ -882,7 +881,7 @@ msgstr "キーワード"
 
 #: lib/Publican/WebSite.pm:125
 msgid "Knowledge"
-msgstr ""
+msgstr "ナレッジ"
 
 # translation auto-copied from project Publican, version 3, document publican
 #: lib/Publican/WebSite.pm:97
