--- a/publican/po/ko.po
+++ b/publican/po/ko.po
@@ -587,15 +587,15 @@ msgstr ""
 
 #: lib/Publican/WebSite.pm:126
 msgid "Document"
-msgstr ""
+msgstr "문서 "
 
 #: lib/Publican/WebSite.pm:128
-msgid "Document Home"
-msgstr ""
+msgid "Document home"
+msgstr "문서 홈 "
 
 #: lib/Publican/WebSite.pm:127
-msgid "Document Language"
-msgstr ""
+msgid "Document language"
+msgstr "문서 언어"
 
 #. ($attr)
 #: lib/Publican/XmlClean.pm:633
@@ -788,7 +788,7 @@ msgstr ""
 
 #: lib/Publican/WebSite.pm:124
 msgid "Formats"
-msgstr ""
+msgstr "포맷 "
 
 #: lib/Publican.pm:442
 msgid "Full path for the publican site configuration file for non standard RPM websites."
@@ -874,7 +874,7 @@ msgstr "키워드"
 
 #: lib/Publican/WebSite.pm:125
 msgid "Knowledge"
-msgstr ""
+msgstr "지식 "
 
 #: lib/Publican/WebSite.pm:97
 msgid "Language"
