--- a/publican/po/or.po
+++ b/publican/po/or.po
@@ -586,15 +586,16 @@ msgstr ""
 
 #: lib/Publican/WebSite.pm:126
 msgid "Document"
-msgstr ""
+msgstr "ଦଲିଲ"
+
 
 #: lib/Publican/WebSite.pm:128
-msgid "Document Home"
-msgstr ""
+msgid "Document home"
+msgstr "ଦଲିଲ ମୂଳ ସ୍ଥାନ"
 
 #: lib/Publican/WebSite.pm:127
-msgid "Document Language"
-msgstr ""
+msgid "Document language"
+msgstr "ଦଲିଲ ଭାଷା"
 
 #. ($attr)
 #: lib/Publican/XmlClean.pm:633
@@ -787,7 +788,7 @@ msgstr ""
 
 #: lib/Publican/WebSite.pm:124
 msgid "Formats"
-msgstr ""
+msgstr "ସଜ୍ଜିକରଣ ଶୈଳୀ"
 
 #: lib/Publican.pm:442
 msgid "Full path for the publican site configuration file for non standard RPM websites."
@@ -873,7 +874,8 @@ msgstr ""
 
 #: lib/Publican/WebSite.pm:125
 msgid "Knowledge"
-msgstr ""
+msgstr "ଜ୍ଞାନ"
+
 
 #: lib/Publican/WebSite.pm:97
 msgid "Language"
