--- a/publican/po/pt_BR.po
+++ b/publican/po/pt_BR.po
@@ -589,15 +589,15 @@ msgstr ""
 
 #: lib/Publican/WebSite.pm:126
 msgid "Document"
-msgstr ""
+msgstr "Documento"
 
 #: lib/Publican/WebSite.pm:128
-msgid "Document Home"
-msgstr ""
+msgid "Document home"
+msgstr "Home to Documento"
 
 #: lib/Publican/WebSite.pm:127
-msgid "Document Language"
-msgstr ""
+msgid "Document language"
+msgstr "Idioma do Documento"
 
 #. ($attr)
 #: lib/Publican/XmlClean.pm:633
@@ -790,7 +790,7 @@ msgstr ""
 
 #: lib/Publican/WebSite.pm:124
 msgid "Formats"
-msgstr ""
+msgstr "Formatos"
 
 #: lib/Publican.pm:442
 msgid "Full path for the publican site configuration file for non standard RPM websites."
@@ -876,7 +876,7 @@ msgstr "Palavras Chave"
 
 #: lib/Publican/WebSite.pm:125
 msgid "Knowledge"
-msgstr ""
+msgstr "Conhecimento"
 
 #: lib/Publican/WebSite.pm:97
 msgid "Language"
