--- a/publican/po/ru.po
+++ b/publican/po/ru.po
@@ -592,17 +592,17 @@ msgstr ""
 
 #: lib/Publican/WebSite.pm:126
 msgid "Document"
-msgstr ""
+msgstr "Документ"
 
 #: lib/Publican/WebSite.pm:128
-msgid "Document Home"
-msgstr ""
+msgid "Document home"
+msgstr "В начало"
+
 
 # translation auto-copied from project Publican, version 3, document publican
 #: lib/Publican/WebSite.pm:127
-#, fuzzy
-msgid "Document Language"
-msgstr "Всего языков"
+msgid "Document language"
+msgstr "Язык документа"
 
 #. ($attr)
 #: lib/Publican/XmlClean.pm:633
@@ -796,7 +796,7 @@ msgstr ""
 
 #: lib/Publican/WebSite.pm:124
 msgid "Formats"
-msgstr ""
+msgstr "Форматы"
 
 #: lib/Publican.pm:442
 msgid "Full path for the publican site configuration file for non standard RPM websites."
@@ -883,7 +883,7 @@ msgstr "Ключевые слова"
 
 #: lib/Publican/WebSite.pm:125
 msgid "Knowledge"
-msgstr ""
+msgstr "Документация"
 
 # translation auto-copied from project Publican, version 3, document publican
 #: lib/Publican/WebSite.pm:97
