--- a/publican/po/zh_TW.po
+++ b/publican/po/zh_TW.po
@@ -587,15 +587,16 @@ msgstr ""
 
 #: lib/Publican/WebSite.pm:126
 msgid "Document"
-msgstr ""
+msgstr "文件"
 
 #: lib/Publican/WebSite.pm:128
-msgid "Document Home"
-msgstr ""
+msgid "Document home"
+msgstr "文件首頁"
 
 #: lib/Publican/WebSite.pm:127
-msgid "Document Language"
-msgstr ""
+msgid "Document language"
+msgstr "文件語言"
+
 
 #. ($attr)
 #: lib/Publican/XmlClean.pm:633
@@ -788,7 +789,7 @@ msgstr ""
 
 #: lib/Publican/WebSite.pm:124
 msgid "Formats"
-msgstr ""
+msgstr "格式"
 
 #: lib/Publican.pm:442
 msgid "Full path for the publican site configuration file for non standard RPM websites."
@@ -874,7 +875,7 @@ msgstr "關鍵字"
 
 #: lib/Publican/WebSite.pm:125
 msgid "Knowledge"
-msgstr ""
+msgstr "知識"
 
 #: lib/Publican/WebSite.pm:97
 msgid "Language"
