--- a/publican/po/bn_IN.po
+++ b/publican/po/bn_IN.po
@@ -586,15 +586,15 @@ msgstr ""
 
 #: lib/Publican/WebSite.pm:126
 msgid "Document"
-msgstr ""
+msgstr "নথি"
 
 #: lib/Publican/WebSite.pm:128
-msgid "Document Home"
-msgstr ""
+msgid "Document home"
+msgstr "নথির প্রথম পাতা"
 
 #: lib/Publican/WebSite.pm:127
-msgid "Document Language"
-msgstr ""
+msgid "Document language"
+msgstr "নথির ভাষা"
 
 #. ($attr)
 #: lib/Publican/XmlClean.pm:633
@@ -787,7 +787,7 @@ msgstr ""
 
 #: lib/Publican/WebSite.pm:124
 msgid "Formats"
-msgstr ""
+msgstr "ফর্ম্যাট"
 
 #: lib/Publican.pm:442
 msgid "Full path for the publican site configuration file for non standard RPM websites."
@@ -873,7 +873,7 @@ msgstr ""
 
 #: lib/Publican/WebSite.pm:125
 msgid "Knowledge"
-msgstr ""
+msgstr "তথ্যাদি"
 
 #: lib/Publican/WebSite.pm:97
 msgid "Language"
