--- a/publican/po/hi.po
+++ b/publican/po/hi.po
@@ -586,15 +586,16 @@ msgstr ""
 
 #: lib/Publican/WebSite.pm:126
 msgid "Document"
-msgstr ""
+msgstr "दस्तावेज़"
 
 #: lib/Publican/WebSite.pm:128
-msgid "Document Home"
-msgstr ""
+msgid "Document home"
+msgstr "दस्तावेज़ मुखपृष्ठ"
 
 #: lib/Publican/WebSite.pm:127
-msgid "Document Language"
-msgstr ""
+msgid "Document language"
+msgstr "दस्तावेज़ भाषा"
+
 
 #. ($attr)
 #: lib/Publican/XmlClean.pm:633
@@ -787,7 +788,7 @@ msgstr ""
 
 #: lib/Publican/WebSite.pm:124
 msgid "Formats"
-msgstr ""
+msgstr "प्रारूप"
 
 #: lib/Publican.pm:442
 msgid "Full path for the publican site configuration file for non standard RPM websites."
@@ -873,7 +874,8 @@ msgstr ""
 
 #: lib/Publican/WebSite.pm:125
 msgid "Knowledge"
-msgstr ""
+msgstr "ज्ञान"
+
 
 #: lib/Publican/WebSite.pm:97
 msgid "Language"
