--- a/publican/po/kn.po
+++ b/publican/po/kn.po
@@ -586,15 +586,15 @@ msgstr ""
 
 #: lib/Publican/WebSite.pm:126
 msgid "Document"
-msgstr ""
+msgstr "ದಸ್ತಾವೇಜು"
 
 #: lib/Publican/WebSite.pm:128
-msgid "Document Home"
-msgstr ""
+msgid "Document home"
+msgstr "ದಸ್ತಾವೇಜಿನ ನೆಲೆ"
 
 #: lib/Publican/WebSite.pm:127
-msgid "Document Language"
-msgstr ""
+msgid "Document language"
+msgstr "ದಸ್ತಾವೇಜಿನ ಭಾಷೆ"
 
 #. ($attr)
 #: lib/Publican/XmlClean.pm:633
@@ -787,7 +787,7 @@ msgstr ""
 
 #: lib/Publican/WebSite.pm:124
 msgid "Formats"
-msgstr ""
+msgstr "ವಿನ್ಯಾಸಗಳು"
 
 #: lib/Publican.pm:442
 msgid "Full path for the publican site configuration file for non standard RPM websites."
@@ -873,7 +873,7 @@ msgstr ""
 
 #: lib/Publican/WebSite.pm:125
 msgid "Knowledge"
-msgstr ""
+msgstr "ಜ್ಞಾನ"
 
 #: lib/Publican/WebSite.pm:97
 msgid "Language"
