--- a/publican/po/pa.po
+++ b/publican/po/pa.po
@@ -586,15 +586,15 @@ msgstr ""
 
 #: lib/Publican/WebSite.pm:126
 msgid "Document"
-msgstr ""
+msgstr "ਦਸਤਾਵੇਜ"
 
 #: lib/Publican/WebSite.pm:128
-msgid "Document Home"
-msgstr ""
+msgid "Document home"
+msgstr "ਦਸਤਾਵੇਜ ਮੁੱਖ-ਸਫ਼ਾ"
 
 #: lib/Publican/WebSite.pm:127
-msgid "Document Language"
-msgstr ""
+msgid "Document language"
+msgstr "ਦਸਤਾਵੇਜੀ ਭਾਸ਼ਾ"
 
 #. ($attr)
 #: lib/Publican/XmlClean.pm:633
@@ -787,7 +787,7 @@ msgstr ""
 
 #: lib/Publican/WebSite.pm:124
 msgid "Formats"
-msgstr ""
+msgstr "ਤਰੀਕੇ"
 
 #: lib/Publican.pm:442
 msgid "Full path for the publican site configuration file for non standard RPM websites."
@@ -873,7 +873,8 @@ msgstr ""
 
 #: lib/Publican/WebSite.pm:125
 msgid "Knowledge"
-msgstr ""
+msgstr "ਜਾਣਕਾਰੀ"
+
 
 #: lib/Publican/WebSite.pm:97
 msgid "Language"
