--- a/publican/po/te.po
+++ b/publican/po/te.po
@@ -586,15 +586,15 @@ msgstr ""
 
 #: lib/Publican/WebSite.pm:126
 msgid "Document"
-msgstr ""
+msgstr "పత్రము"
 
 #: lib/Publican/WebSite.pm:128
-msgid "Document Home"
-msgstr ""
+msgid "Document home"
+msgstr "పత్రము నివాసం"
 
 #: lib/Publican/WebSite.pm:127
-msgid "Document Language"
-msgstr ""
+msgid "Document language"
+msgstr "పత్రము భాష"
 
 #. ($attr)
 #: lib/Publican/XmlClean.pm:633
@@ -787,7 +787,7 @@ msgstr ""
 
 #: lib/Publican/WebSite.pm:124
 msgid "Formats"
-msgstr ""
+msgstr "ఫార్మాట్లు"
 
 #: lib/Publican.pm:442
 msgid "Full path for the publican site configuration file for non standard RPM websites."
@@ -873,7 +873,7 @@ msgstr ""
 
 #: lib/Publican/WebSite.pm:125
 msgid "Knowledge"
-msgstr ""
+msgstr "జ్ఞానం"
 
 #: lib/Publican/WebSite.pm:97
 msgid "Language"
