Reall, really Fix UTF8 image names getting mangled in publish. BZ #953618

--- a/publican/Users_Guide/pot/Revision_History.pot
+++ b/publican/Users_Guide/pot/Revision_History.pot
@@ -4,8 +4,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: 0\n"
-"POT-Creation-Date: 2013-07-19 08:51+1000\n"
-"PO-Revision-Date: 2013-07-19 08:51+1000\n"
+"POT-Creation-Date: 2013-08-06 09:04+1000\n"
+"PO-Revision-Date: 2013-08-06 09:04+1000\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: None\n"
 "MIME-Version: 1.0\n"
@@ -29,7 +29,7 @@ msgstr ""
 
 #. Tag: member
 #, no-c-format
-msgid "Replaced a broken link to kate plugins page on CPAN with a working link - BZ#973461"
+msgid "Added command prompts to all commands - BZ#880456"
 msgstr ""
 
 #. Tag: member
@@ -39,7 +39,12 @@ msgstr ""
 
 #. Tag: member
 #, no-c-format
-msgid "Added command prompts to all commands - BZ#880456"
+msgid "Replaced a broken link to kate plugins page on CPAN with a working link - BZ#973461"
+msgstr ""
+
+#. Tag: member
+#, no-c-format
+msgid "Updated web site instructions - BZ#979224"
 msgstr ""
 
 #. Tag: firstname
